merul_Dev/src/objects/custActionHistory__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedCase</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>custCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>custActionHistory</label>
    <nameField>
        <label>custActionHistoryName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>custActionHistorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>